chore: neoforge config screen registration